--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,9 @@
           </div>
 
           <nav>
+            <a href="{{ site.baseurl }}/about">AboutMi!</a>
+            <a href="{{ site.baseurl }}/popmachina">PopMachina</a>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
       </div>
